[workspace]
members = [
	"shukusai",
	"gui",
#	"web",
#	"daemon",
#	"cli",
]
resolver = "2"

[profile.release]
lto           = true
strip         = "none"
codegen-units = 1

[profile.dev]
strip     = "none"
opt-level = 1

# Run tests in `--release` mode.
#[profile.test]
#lto           = true
#strip         = "symbols"
#codegen-units = 1

[workspace.dependencies]
### Personal.
shukusai = { version = "0.0.2",  path = "shukusai" }
benri    = { version = "0.1.12", features = ["log"] }
disk     = { version = "0.1.19", features = ["bincode2", "empty", "toml", "plain", "json", "bytesize"] }
readable = { version = "0.8.10",  features = ["ignore_nan_inf", "serde", "bincode"] }

### Regular libraries.
anyhow       = { version = "1.0.71" }
bincode      = { version = "2.0.0-rc.3", features = ["serde"] }
clap         = { version = "4", features = ["derive"] }
crossbeam    = { version = "0.8.2", features = ["crossbeam-channel"] }
const_format = { version = "0.2.31", features = ["rust_1_51", "assertcp", "rust_1_64"] }
compact_str  = { version = "0.7.0" }
image        = { version = "0.24.6" }
log          = { version = "0.4.18" }
once_cell    = { version = "1.18.0" }
paste        = { version = "1.0.12" }
rand         = { version = "0.8.5", features = ["small_rng"] }
serde        = { version = "1.0.163", features = ["derive"] }
serde_bytes  = { version = "0.11.9" }

### HACK:
### `egui`'s workspace needs this.
thiserror = "1.0.37"
