[workspace]
members = [
	"shukusai",
	"gui",
	"rpc",
	"daemon",
	"cli",
]
exclude = [
	"web",
	"tui",
]
resolver = "2"

[profile.release]
lto           = true
strip         = "none"
codegen-units = 1
opt-level     = 3

[profile.dev]
lto       = false
strip     = "none"
opt-level = 1

#[profile.test]
#lto           = false
#strip         = "none"
#opt-level     = 1

[workspace.dependencies]
### Personal.
shukusai = { version = "0.0.6",  path = "shukusai" }
benri    = { version = "0.1.12", features = ["log"] }
disk     = { version = "0.1.20", features = ["bincode2", "empty", "toml", "plain", "json", "bytesize"] }
readable = { version = "0.8.12",  features = ["ignore_nan_inf", "serde", "bincode"] }
json-rpc = { version = "0.1.2", path = "external/json-rpc" }
rpc      = { version = "1.0.0", path = "rpc/" }

### Regular libraries.
anyhow       = { version = "1.0.71" }
bincode      = { version = "2.0.0-rc.3", features = ["serde"] }
clap         = { version = "4", features = ["derive"] }
crossbeam    = { version = "0.8.2", features = ["crossbeam-channel"] }
const_format = { version = "0.2.31", features = ["rust_1_51", "assertcp", "rust_1_64"] }
compact_str  = { version = "0.7.0" }
dirs         = { version = "5.0.1" }
env_logger   = { version = "0.10.0" }
image        = { version = "0.24.6" }
log          = { version = "0.4.18", features = ["serde"] }
libc         = { version = "0.2.147" }
memmap2      = { version = "0.6.2" }
once_cell    = { version = "1.18.0" }
open         = { version = "4.2.0" }
paste        = { version = "1.0.12" }
rand         = { version = "0.8.5", features = ["small_rng"] }
serde        = { version = "1.0.163", features = ["derive", "rc"] }
serde_bytes  = { version = "0.11.9" }
serde_json   = { version = "1.0.100", features = ["preserve_order"] }
seq-macro    = { version = "0.3.3" }
strum        = { version = "0.25.0", features = ["derive"] }
termimad     = { version = "0.23.2" }
toml_edit    = { version = "0.19.14" }
walkdir      = { version = "2.3.3" }
zeroize      = { version = "1.6.0", features = ["std", "zeroize_derive"] }
zip          = { version = "0.6.6" }

### HACK:
### `egui`'s workspace needs this.
thiserror = "1.0.37"
