[package]
name                    = "festival-cli"
version.workspace       = true
edition.workspace       = true
authors.workspace       = true
homepage.workspace      = true
documentation.workspace = true
repository.workspace    = true
keywords.workspace      = true
categories.workspace    = true
readme.workspace        = true
license-file.workspace  = true

[dependencies]
