[package]
name           = "festival-cli"
version        = "0.0.0"
edition        = "2021"
authors        = ["hinto.janai <hinto.janai@protonmail.com>"]
homepage       = "https://festival.pm"
documentation  = "https://docs.rs/shukusai"
repository     = "https://github.com/hinto-janai/festival"
keywords       = ["music", "player", "audio", "festival", "shukusai"]
categories     = ["multimedia"]
readme         = "README.md"
license        = "MIT"
description    = "festivald CLI client"

[dependencies]
### Personal Libraries.
shukusai = { workspace = true }
benri    = { workspace = true }
disk     = { workspace = true }
readable = { workspace = true }
json-rpc = { workspace = true }
rpc      = { workspace = true }

### Shared.
anyhow       = { workspace = true }
bincode      = { workspace = true }
clap         = { workspace = true }
const_format = { workspace = true }
compact_str  = { workspace = true }
crossbeam    = { workspace = true }
dirs         = { workspace = true }
env_logger   = { workspace = true }
log          = { workspace = true }
memmap2      = { workspace = true }
#rand         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
strum        = { workspace = true }
once_cell    = { workspace = true }
open         = { workspace = true }
zip          = { workspace = true }

### Regular libraries.
http             = { version = "0.2.9" }
zeroize          = { version = "1.6.0", features = ["std", "zeroize_derive"] }
base64           = { version = "0.21.2" }
urlencoding      = { version = "2.1.3" }
hex              = { version = "0.4.3" }
ureq             = { version = "2.7.1", features = ["native-tls", "json", "socks-proxy"] }
