[package]
name           = "festivald"
version        = "0.0.0"
edition        = "2021"
authors        = ["hinto.janai <hinto.janai@protonmail.com>"]
homepage       = "https://festival.pm"
documentation  = "https://docs.rs/shukusai"
repository     = "https://github.com/hinto-janai/festival"
keywords       = ["music", "player", "audio", "festival", "shukusai"]
categories     = ["multimedia"]
readme         = "README.md"
license        = "MIT"
description    = "Music player (daemon)"

[dependencies]
### Personal Libraries.
# FIXME: change `gui` to `daemon` once `shukusai` is no longer coupled
shukusai = { workspace = true, features = ["gui", "panic"] }
benri    = { workspace = true }
disk     = { workspace = true }
readable = { workspace = true }
json-rpc = { workspace = true }

### Shared.
anyhow       = { workspace = true }
bincode      = { workspace = true }
clap         = { workspace = true }
const_format = { workspace = true }
compact_str  = { workspace = true }
crossbeam    = { workspace = true }
image        = { workspace = true }
log          = { workspace = true }
rand         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
strum        = { workspace = true }
once_cell    = { workspace = true }

### Regular libraries.
hyper     = { version = "1.0.0-rc.4", features = ["full"] }
tokio     = { version = "1.29.1", features = ["full"] }
toml_edit = { version = "0.19.14", features = ["perf"] }
sha3      = { version = "0.10.8" }
hex = "0.4.3"
