[package]
name           = "festivald"
version        = "1.0.0"
edition        = "2021"
authors        = ["hinto.janai <hinto.janai@protonmail.com>"]
homepage       = "https://festival.pm"
documentation  = "https://docs.rs/shukusai"
repository     = "https://github.com/hinto-janai/festival"
keywords       = ["music", "player", "audio", "festival", "shukusai"]
categories     = ["multimedia"]
readme         = "README.md"
license        = "MIT"
description    = "Music player daemon"
rust-version   = "1.70"

[dependencies]
### Personal Libraries.
shukusai = { workspace = true, features = ["daemon", "panic"] }
benri    = { workspace = true }
disk     = { workspace = true }
readable = { workspace = true }
json-rpc = { workspace = true }
rpc      = { workspace = true }

### Shared.
anyhow       = { workspace = true }
bincode      = { workspace = true }
clap         = { workspace = true }
const_format = { workspace = true }
compact_str  = { workspace = true }
crossbeam    = { workspace = true }
dirs         = { workspace = true }
image        = { workspace = true }
log          = { workspace = true }
memmap2      = { workspace = true }
rand         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
strum        = { workspace = true }
once_cell    = { workspace = true }
open         = { workspace = true }
walkdir      = { workspace = true }
toml_edit    = { workspace = true }
zeroize      = { workspace = true }
zip          = { workspace = true }

### Regular libraries.
http             = { version = "0.2.9" }
hyper            = { version = "0.14.27", features = ["full"] }
tokio            = { version = "1.29.1", features = ["full"] }
mime             = { version = "0.3.17" }
urlencoding      = { version = "2.1.3" }
hyper-staticfile = { version = "0.9.5" }
tokio-util       = { version = "0.7.8", features = ["full"] }

# Vendored for Linux.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-native-tls = { version = "0.3.1", features = ["vendored"] }
[target.'cfg(not(target_os = "linux"))'.dependencies]
tokio-native-tls = { version = "0.3.1" }
