[package]
name = "festival-cli"
version = "0.0.0"
edition = "2021"
authors = ["hinto.janai <hinto.janai@protonmail.com>"]
description = "Festival CLI client"
homepage = "https://festival.pm"
documentation = "https://github.com/hinto-janai/festival/festival-cli/README.md"
repository = "https://github.com/hinto-janai/festival"
readme = "README.md"
keywords = ["music", "player", "audio", "festival", "cli"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
