[package]
name = "festival-gui"
version = "0.0.0"
edition = "2021"
build = "build.rs"
authors = ["hinto.janai <hinto.janai@protonmail.com>"]
description = "Festival GUI"
homepage = "https://festival.pm"
documentation = "https://github.com/hinto-janai/festival/festival-gui/README.md"
repository = "https://github.com/hinto-janai/festival"
readme = "README.md"
keywords = ["music", "player", "audio", "festival", "gui"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
### Festival Internals.
shukusai = { path = "../", version = "0.0.0" }

### External patched libraries `external/`.
egui        = { version = "0.21.0", path = "../external/egui/crates/egui",        features = ["default_fonts"], default-features = false }
eframe      = { version = "0.21.0", path = "../external/egui/crates/eframe",      features = ["wgpu"],          default-features = false }
egui_extras = { version = "0.21.0", path = "../external/egui/crates/egui_extras", features = ["image"] }

### Regular libraries.
clap  = { version = "4.1.13", features = ["derive"] }
crossbeam-channel = "0.5.7"
disk  = { version = "0.0.5", features = ["toml", "empty"] }
image = { version = "0.24.6", features = ["jpeg", "png"], default-features = false }
log   = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
rolock = "0.1.2"

# For Windows build (icon)
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
static_vcruntime = "2.0.0"
