[package]
name = "festivald"
version = "0.0.0"
edition = "2021"
authors = ["hinto.janai <hinto.janai@protonmail.com>"]
description = "Festival daemon"
homepage = "https://festival.pm"
documentation = "https://github.com/hinto-janai/festival/festivald/README.md"
repository = "https://github.com/hinto-janai/festival"
readme = "festivald/README.md"
keywords = ["music", "player", "audio", "festival", "daemon"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
