[package]
name = "festival-gui"
version = "0.0.0"
edition = "2021"
build = "gui/build.rs"
authors = ["hinto.janai <hinto.janai@protonmail.com>"]
description = "Festival GUI"
homepage = "https://festival.pm"
documentation = "https://github.com/hinto-janai/festival/festival-gui/README.md"
repository = "https://github.com/hinto-janai/festival"
readme = "README.md"
keywords = ["music", "player", "audio", "festival", "gui"]
license = "MIT"

[dependencies]
### Festival Internals.
shukusai = { path = "../", version = "0.0.0" }

### Personal Libraries.
benri    = { version = "*", git = "https://github.com/hinto-janai/benri", features = ["log"] }
disk     = { version = "0.1.13", git = "https://github.com/hinto-janai/disk", features = ["bincode2", "empty", "toml", "plain", "json", "bytesize"] }
readable = { version = "*", git = "https://github.com/hinto-janai/readable", features = ["full"] }
rolock   = { version = "*", git = "https://github.com/hinto-janai/rolock" }

### External patched libraries `external/`.
egui        = { version = "0.21.0", path = "../external/egui/crates/egui",        features = ["default_fonts", "serde"], default-features = false }
eframe      = { version = "0.21.0", path = "../external/egui/crates/eframe",      features = ["wgpu"],          default-features = false }
egui_extras = { version = "0.21.0", path = "../external/egui/crates/egui_extras", features = ["image"] }

## 3rd party `egui`.
egui_dnd    = { version = "0.3.0", path = "../external/egui_dnd" }
egui-notify = { version = "0.6.0", path = "../external/egui-notify" }

### Regular libraries.
anyhow = "1.0.71"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
clap  = { version = "4.3.2", features = ["derive"] }
compact_str = "0.7.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
image = { version = "0.24.6", features = ["jpeg", "png"], default-features = false }
log   = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
rfd = "0.11.4"
const_format = "0.2.31"
once_cell = "1.18.0"
dirs = "5.0.1"
open = "4.1.0"

# For Windows build (icon)
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
static_vcruntime = "2.0.0"
