[package]
name                    = "festival-gui"
version.workspace       = true
edition.workspace       = true
authors.workspace       = true
homepage.workspace      = true
documentation.workspace = true
repository.workspace    = true
keywords.workspace      = true
categories.workspace    = true
readme.workspace        = true
license-file.workspace  = true

[dependencies]
### Personal Libraries.
shukusai = { workspace = true, features = ["gui", "panic"] }
benri    = { workspace = true }
disk     = { workspace = true }
readable = { workspace = true }

### External patched libraries `external/`.
egui        = { version = "0.21.0", path = "../external/egui/crates/egui",        features = ["default_fonts", "serde"], default-features = false }
eframe      = { version = "0.21.0", path = "../external/egui/crates/eframe",      features = ["wgpu"],                   default-features = false }
egui_extras = { version = "0.21.0", path = "../external/egui/crates/egui_extras", features = ["image"],                  default-features = false }
epaint      = { version = "0.21.0", path = "../external/egui/crates/epaint" }
egui_dnd    = { version = "0.3.0",  path = "../external/egui_dnd" }
egui-notify = { version = "0.6.0",  path = "../external/egui-notify" }

### Shared.
anyhow       = { workspace = true }
bincode      = { workspace = true }
clap         = { workspace = true }
const_format = { workspace = true }
compact_str  = { workspace = true }
crossbeam    = { workspace = true }
image        = { workspace = true }
log          = { workspace = true }
serde        = { workspace = true }
once_cell    = { workspace = true }

### Regular libraries.
rfd  = "0.11.4"
dirs = "5.0.1"
open = "4.1.0"

# For Windows build (icon)
[target.'cfg(windows)'.build-dependencies]
winres           = "0.1.12"
static_vcruntime = "2.0.0"
