[package]
name           = "festival-gui"
version        = "1.1.0"
edition        = "2021"
authors        = ["hinto.janai <hinto.janai@protonmail.com>"]
homepage       = "https://festival.pm"
documentation  = "https://docs.rs/shukusai"
repository     = "https://github.com/hinto-janai/festival"
keywords       = ["music", "player", "audio", "festival", "shukusai"]
categories     = ["multimedia"]
readme         = "README.md"
license        = "MIT"
description    = "Music player"

[[bin]]
name = "festival"
path = "src/main.rs"

[dependencies]
### Personal Libraries.
shukusai = { workspace = true, features = ["gui", "panic"] }
benri    = { workspace = true }
disk     = { workspace = true }
readable = { workspace = true }

### External patched libraries `external/`.
egui        = { version = "0.22.0", path = "../external/egui/crates/egui",        features = ["default_fonts", "serde"], default-features = false }
eframe      = { version = "0.22.0", path = "../external/egui/crates/eframe",      features = ["glow", "wgpu"],           default-features = false }
egui_extras = { version = "0.22.0", path = "../external/egui/crates/egui_extras", features = ["image"],                  default-features = false }
epaint      = { version = "0.22.0", path = "../external/egui/crates/epaint" }
egui-notify = { version = "0.7.0",  path = "../external/egui-notify" }

### Shared.
anyhow       = { workspace = true }
bincode      = { workspace = true }
clap         = { workspace = true }
const_format = { workspace = true }
compact_str  = { workspace = true }
crossbeam    = { workspace = true }
image        = { workspace = true }
log          = { workspace = true }
serde        = { workspace = true }
once_cell    = { workspace = true }

### Regular libraries.
rfd  = "0.11.4"
dirs = "5.0.1"
open = "4.1.0"

# For Windows build (icon)
[target.'cfg(windows)'.build-dependencies]
winres           = "0.1.12"
static_vcruntime = "2.0.0"

# For Windows msi (cargo-bundle)
[package.metadata.bundle]
name       = "Festival"
identifier = "pm.festival.Festival"
icon       = ["../assets/images/icon/icon.ico"]
resources  = ["../assets/images/icon/icon.ico"]
category   = "public.app-category.music"

# For Windows console.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = [
	"Win32_Foundation",
	"Win32_System_Console",
]}
