[package]
name           = "rpc"
version        = "0.0.0"
edition        = "2021"
authors        = ["hinto.janai <hinto.janai@protonmail.com>"]
homepage       = "https://festival.pm"
documentation  = "https://docs.rs/shukusai"
repository     = "https://github.com/hinto-janai/festival"
keywords       = ["music", "player", "audio", "festival", "shukusai"]
categories     = ["multimedia"]
readme         = "README.md"
license        = "MIT"
description    = "JSON-RPC 2.0 types for Festival"

[dependencies]
### Personal Libraries.
shukusai = { workspace = true, features = ["daemon", "panic"] }
benri    = { workspace = true }
disk     = { workspace = true }
readable = { workspace = true }
json-rpc = { workspace = true }

### Shared.
anyhow       = { workspace = true }
bincode      = { workspace = true }
clap         = { workspace = true }
const_format = { workspace = true }
compact_str  = { workspace = true }
crossbeam    = { workspace = true }
image        = { workspace = true }
log          = { workspace = true }
paste        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
once_cell    = { workspace = true }
seq-macro    = { workspace = true }
strum        = { workspace = true }
