[package]
name           = "shukusai"
version        = "0.0.0"
edition        = "2021"
authors        = ["hinto.janai <hinto.janai@protonmail.com>"]
homepage       = "https://festival.pm"
documentation  = "https://docs.rs/shukusai"
repository     = "https://github.com/hinto-janai/festival"
keywords       = ["music", "player", "audio", "festival", "shukusai"]
categories     = ["multimedia"]
readme         = "README.md"
license        = "MIT"
description    = "Festival (music player) internals"

include = [
	"src",
	"assets/images/diagram",
    "assets/images/art/unknown.png",
	"assets/images/icon/512.png",
	"assets/images/cmp/*",
]

[features]
default = []
panic   = []
gui     = ["egui", "eframe", "egui_extras", "epaint"]
daemon  = []
cli     = []
web     = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
static_vcruntime = "2.0"

[dependencies]
benri    = { workspace = true }
disk     = { workspace = true }
readable = { workspace = true }

# GUI
egui        = { version = "0.22.0", path = "../external/egui/crates/egui",        features = ["default_fonts", "serde"], default-features = false, optional = true }
eframe      = { version = "0.22.0", path = "../external/egui/crates/eframe",      features = ["wgpu"],                   default-features = false, optional = true }
egui_extras = { version = "0.22.0", path = "../external/egui/crates/egui_extras", features = ["image"],                  default-features = false, optional = true  }
epaint      = { version = "0.22.0", path = "../external/egui/crates/epaint", optional = true  }
egui-notify = { version = "0.7.0", path = "../external/egui-notify" }

### Shared.
anyhow       = { workspace = true }
bincode      = { workspace = true }
crossbeam    = { workspace = true }
const_format = { workspace = true }
compact_str  = { workspace = true }
image        = { workspace = true }
log          = { workspace = true }
once_cell    = { workspace = true }
paste        = { workspace = true }
rand         = { workspace = true }
serde_bytes  = { workspace = true }
serde        = { workspace = true }

### Regular.
env_logger        = "0.10.0"
fast_image_resize = "2.7.3"
infer             = "0.13.0"
notify            = "6.0.0"
memmap2           = "0.6.2"
mime_guess        = "2.0.4"
seq-macro         = "0.3.3"
souvlaki          = "0.6.0"
symphonia         = { version = "0.5.2", path = "../external/Symphonia/symphonia", features = ["all"] }
strsim            = "0.10.0"
walkdir           = "2.3.3"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding        = "2.27.1"
libpulse-simple-binding = "2.27.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arrayvec = "0.7.2"
cpal     = "0.15.2"
rb       = "0.3.2"
# INVARIANT:
# This _must_ be `0.12.0`.
# See `src/audio/resampler.rs` for more info.
rubato = "0.12.0"

[target.'cfg(windows)'.dependencies]
# Needed for souvlaki + icon.
windows = { version = "0.48.0", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_LibraryLoader",
]}
