[package]
name = "disk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
toml        = ["toml_edit"]
json        = ["serde_json"]
yaml        = ["serde_yaml"]
pickle      = ["serde-pickle"]
messagepack = ["rmp-serde"]
full        = ["toml", "json", "yaml", "log", "bincode", "pickle", "messagepack", "bson"]

[dependencies]
# Required.
anyhow      = "1.0.69"
#disk_derive = { path = "../disk_derive" }
directories = "4.0.1"
serde       = { version = "1.0.152", features = ["derive"] }
const_format = { version = "0.2.30", features = ["rust_1_51", "assertcp", "rust_1_64"] }
flate2 = "1.0.25"
lazy_static = "*"

# Optional.
log          = { version = "0.4.17", optional = true }
bincode      = { version = "1.3.3", optional = true }
toml_edit    = { version = "0.19.4", features = ["serde"], optional = true }
serde_json   = { version = "1.0.93", optional = true }
serde_yaml   = { version = "0.9.17", optional = true }
serde-pickle = { version = "1.1.1", optional = true }
rmp-serde    = { version = "1.1.1", optional = true }
bson         = { version = "2.5.0", optional = true }
