[package]
name = "disk_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
serde = { version = "*", features = ["derive"] }
syn = "1.0.107"
quote = "1.0.23"
paste = "1.0"
proc-macro2 = "1.0"
darling = "0.14.3"
